--- a/Styling/Kombi Koffee 3.css
+++ b/Styling/Kombi Koffee 3.css
@@ -69,9 +69,9 @@ body {
 }
 
 .container {
-    width: 80%;
+    width: 70%;
     margin: 0 auto;
-    overflow: hidden;
+    overflow: visible;
 }
 
 header {
@@ -143,6 +143,89 @@ main {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
+.staffOne {
+    background: rgba(0, 0, 0, 0.6);
+    padding: 10px;
+    text-align: center;
+    font-family: 'Pacifico', cursive;
+    border-radius: 20px;
+    margin: 10px auto;
+    overflow:visible;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.staffImageOne {
+    float: left;
+    width: 300px;
+    border-radius: 40px;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    transition: scale 0.5s;
+    margin: 10px;
+}
+
+.staffImageOne:hover,
+.staffTextOne:hover,
+.staffImageTwo:hover,
+.staffTextTwo:hover {
+    scale: 1.1;
+}
+
+.staffTextOne {
+    background: rgba(255, 235, 205, 0.7);
+    margin: 10px 0;
+    border-radius: 10px;
+    color: #6d4c41;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    float: right;
+    width: 40%;
+    margin-left: 5px;
+    transition: scale 0.5s;
+}
+
+.staffTwo {
+    background: rgba(0, 0, 0, 0.6);
+    padding: 20px 0;
+    text-align: center;
+    font-family: 'Pacifico', cursive;
+    border-radius: 20px;
+    margin: 10px auto;
+    overflow: visible;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+
+.staffImageTwo {
+    float: right;
+    width: 300px;
+    border-radius: 40px;
+    max-width: 100%;
+    height: auto;
+    transition: scale 0.5s;
+    display: flex;
+    justify-content: space-around;
+    margin: 10px;
+}
+
+.staffTextTwo {
+    background: rgba(255, 235, 205, 0.7);
+    margin: 10px 0;
+    padding: 20px;
+    border-radius: 10px;
+    color: #6d4c41;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    float: left;
+    width: 40%;
+    margin-left: 5px;
+    transition: scale 0.5s;
+}
 footer {
     background: rgba(0, 0, 0, 0.7);
     color: #fff;
